maybe fixed swipe to reload on mobile

--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@ html, body {
   color: white;
 
   font-size: 1.2rem;
+
+  overscroll-behavior-y: contain;
 }
 
 * {
